# NTT

./: .gitignore  LICENSE  Makefile  README.md  bitrev1024_table.c  bitrev512_table.c  bitrev512_table.h  data_poly1024.h  kat_mul1024.c  kat_mul1024_red_asm.c  make_red_tables.c  make_tables.c  naive_ntt.c  naive_ntt1024.c  naive_ntt16.c  naive_ntt256.c  naive_ntt256.h  naive_ntt512.c  naive_ntt512.h  notes.txt  ntt.c  ntt.h  ntt16.h  ntt256.c  ntt256.h  ntt32_tables.c  ntt32_tables.h  ntt512.c  ntt_asm.S  ntt_asm.h  ntt_red.c  ntt_red.h  ntt_red1024.h  ntt_red16.c  ntt_red16.h  ntt_red512.h  ntt_red_asm1024.c  ntt_red_asm1024.h  ntt_red_asm16.c  ntt_red_asm16.h  (+32 more)
data/: primitive-roots-4096.txt
interval_abstraction/: intervals.c  intervals.h  ntt_red_interval.c  ntt_red_interval.h  primitive-roots-1024.txt  red_bounds.h  test_abstract1024.c  test_abstract1024_more.c  test_abstract1024_more2.c  test_abstract16.c
old/: bitrev_tables.h  loop_ntt256_product1.c  loop_ntt256_product4.c  loop_ntt256_product5.c  loop_ntt_red1024_product1.c  test_red_ntt_tables.c  test_red_ntt_tables.h
src/: Makefile  README.md  bitrev1024_table.h  bitrev16_table.c  bitrev16_table.h  bitrev256_table.c  bitrev256_table.h  data_poly1024.c  intervals.h  kat_mul1024.c  kat_mul1024_red.c  make_bitrev_table.c  make_tables.c  naive_ntt.h  naive_ntt1024.h  naive_ntt16.h  notes.txt  ntt1024.c  ntt1024.h  ntt16.c  ntt512.h  ntt_asm.S  ntt_asm.h  ntt_red.c  ntt_red.h  ntt_red1024.c  ntt_red16.c  ntt_red256.c  ntt_red256.h  ntt_red512.c  ntt_red_asm1024.c  ntt_red_asm16.c  ntt_red_asm256.c  ntt_red_asm256.h  ntt_red_asm512.c  ntt_red_bounds.txt  ntt_red_interval.h  red-bounds.txt  red_bounds.h  speed_mul1024_naive.c  (+13 more)
src/interval_abstraction/: ntt_red2048_tables.c  ntt_red2048_tables.h  primitive-roots-2048.txt  product1024.c  test_abstract16_more.c  test_abstract2048.c  test_abstract2048_more.c  test_abstract2048_more2.c  test_abstract512.c
src/tests_in_paper/: Makefile  test_intt_red1024.c  test_intt_red1024b.c  test_ntt_red1024.c  test_ntt_red1024b.c  test_ntt_red1024c.c  test_ntt_red1024d.c  test_ntt_red1024e.c  test_ntt_red1024f.c
verifier/: CMakeLists.txt  README.md  install.sh
verifier/src/: CMakeLists.txt  ntt_intervals.cpp  ntt_intervals.hpp  ntt_verifier.cpp
verifier/vstte20-benchmarks/: Makefile  clam.h  harness_intt_red1024.c  harness_intt_red1024b.c  harness_ntt_red1024.c  harness_ntt_red1024b.c  harness_ntt_red1024c.c  harness_ntt_red1024d.c  harness_ntt_red1024e.c  harness_ntt_red1024f.c  make_tables.c  ntt.c  ntt_red.c  ntt_red1024.c  red_bounds.c  red_bounds.h  sort.c  sort.h  verify.sh  verify_all
